--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:5000/api
-NEXT_PUBLIC_SOCKET_URL=http://localhost:5000
+NEXT_PUBLIC_API_URL=https://random-app-server.onrender.com/api
+NEXT_PUBLIC_SOCKET_URL=https://random-app-server.onrender.com
 
 # For production, use your deployed backend URLs:
 # NEXT_PUBLIC_API_URL=https://your-backend-domain.com/api
